--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dco",
+  "name": "deco-page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,11 +12,23 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "styled-components": "^5.3.8",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
+    "tailwindcss": "^3.2.7"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
